--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script defer src="index.js"></script>
+  <link rel="stylesheet" href="style.css" />
 
-    <title>Pokédex</title>
-  </head>
-  <body>
-    <main class="pokedex">
-      <img src="#" alt="pokemon" class="pokemon__image" />
+  <script defer src="index.js"></script>
 
+  <title>Pokédex</title>
+</head>
+
+<body>
+  <main class="pokedex">
+    <div class="boton"></div>
+
+    <section>
       <h1 class="pokemon__data">
+
+        <img src="#" alt="pokemon" class="pokemon__image" />
+
+        <img src="paisaje.jpg" alt="pokedex" id="renderImg" class="pokedex" />
         <span class="pokemon__number"></span> -
         <span class="pokemon__name"></span>
+        <span class="abilitys">Abilities</span>
+        <span class="pokemon__abilities"></span>
+        <span class="type">Type</span>
+        <span class="pokemon__type"></span>
+        <span class="stats">Stats</span>
+        <span class="pokemon__stats"></span>
+
+
+
         <div data-poke-stats class="poke-stats"></div>
       </h1>
 
-      <form class="form">
-        <input
-          type="search"
-          class="input__search"
-          placeholder="Name or Number"
-          required
-        />
-      </form>
+    </section>
 
-      <div class="buttons">
-        <button class="button btn-prev">Prev &lt;</button>
-        <button class="button btn-next">Next &gt;</button>
-      </div>
 
-      <img src="paisaje.jpg" alt="pokedex" id="renderImg" class="pokedex" />
-    </main>
-  </body>
+
+
+    <form class="form">
+      <input type="search" class="input__search" placeholder="Name or Number" required />
+    </form>
+    <div class="buttons">
+      <button id="button" class="button btn-prev">Prev &lt;</button>
+      <button id="button" class="button btn-next">Next &gt;</button>
+    </div>
+  </main>
+</body>
+
 </html>
